# moai-studio

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.local.md  Cargo.toml  DESIGN.md  DESIGN.v3.md  DESIGN.v4.md  NEXT-STEPS.md  README.md  REFERENCES.md
.cargo/: config.toml
.claude/: settings.json
.github/: SIGNING.md  WORKFLOWS.md
.github/actions/install-signing/: action.yml
.github/workflows/: ci-rust.yml  ci-swift.yml  ci-swift.yml.disabled
.moai/config/sections/: project.yaml
.moai/design/: master-plan.md
.moai/design/archive/: pencil-redesign-v2.md  research-v2.md  spec-v2.md  tb-vs-tc-report.md
.moai/project/: product.md  structure.md  tech.md
.moai/specs/RELEASE-V0.1.2/: feature-audit.md
app/MoAIStudio.xcodeproj/: project.pbxproj
app/Tests/: MockRustCoreBridge.swift
core/crates/moai-ffi/: Cargo.toml
core/crates/moai-ffi/src/: lib.rs  pane.rs  surface.rs
core/crates/moai-ffi/tests/: pane_surface_ffi.rs
crates/moai-studio-terminal/: build.rs
crates/moai-studio-ui/: Cargo.toml
crates/moai-studio-workspace/: Cargo.toml
crates/moai-studio-workspace/src/: lib.rs
docs/: M0-COMPLETION.md
docs/spikes/: SPIKE-V3-003-01-gpui-divider.md
pencil/: moai-termail.pen
research/: B1-bridge-direct-connect.md  B2-hook-events-tool-system.md  B3-extension-points.md  B4-official-docs-verification.md  B5-wsl-wslg-windows-coverage.md  R1-native-ai-shells.md
scripts/: build-ghostty-xcframework.sh  export-signing-assets.sh  rename-repo.sh  setup-signing-local.sh  stress-test-4ws.sh  validate-claude-e2e.sh
scripts/ci/: check-history-sha.sh
(+94 files in other folders)
