[package]
name = "moai-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# staticlib: Swift SPM 링킹용 정적 라이브러리 (.a)
# cdylib: 동적 라이브러리 (.dylib) — 옵션
# rlib: cargo test가 사용하는 Rust 라이브러리
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
moai-core = { path = "../moai-core" }
tracing = { workspace = true }

[build-dependencies]
swift-bridge-build = "0.1.59"
